--- a/wizard.html
+++ b/wizard.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>xhEditor初始化代码生成向导 for xhEditor 1.1.6</title>
+<title>xhEditor初始化代码生成向导 for xhEditor 1.1.7</title>
 <script type="text/javascript" src="jquery/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="xheditor-zh-cn.js"></script>
 <script type="text/javascript">
@@ -63,7 +63,7 @@ body{
 </style>
 </head>
 <body>
-	<h1 class="top">xhEditor初始化代码生成向导 for xhEditor 1.1.6</h1>
+	<h1 class="top">xhEditor初始化代码生成向导 for xhEditor 1.1.7</h1>
 	<h2>1: 选择编辑器初始化模式</h2>
 	<div class="section"><select id="editorMode"><option value="1" selected="selected">Class初始化</option><option value="2">Javascript初始化</option></select></div>
 	<h2>2: 更改初始化参数</h2>
@@ -81,10 +81,11 @@ body{
 					<p><label><acronym title="阴影的深度(按钮面板和模式窗口的背景阴影)">layerShadow</acronym></label><input type="text" value="" name="layerShadow"> <span>按钮面板和模式窗口的背景阴影，参数：0(不显示),大于0(显示阴影并设置阴影深度)</span></p>
 					<p><label><acronym title="点击任意位置取消按钮面板功能">clickCancelDialog</acronym></label><select name="clickCancelDialog"><option value="" selected="selected">开启 (default)</option><option value="false">关闭</option></select> <span>点击任意位置取消按钮面板功能</span></p>
 					<p><label><acronym title="强制P标签">forcePtag</acronym></label><select name="forcePtag"><option value="" selected="selected">强制P标签 (default)</option><option value="false">使用BR标签</option></select> <span>强制P标签</span></p>
-					<p><label><acronym title="强制将粘贴的内容转换为文本">forcePasteText</acronym></label><select name="forcePasteText"><option value="true">开启</option><option value="false" selected="selected">关闭 (default)</option></select> <span>强制将粘贴的内容转换为文本</span></p>
 					<p><label><acronym title="禁用编辑区的右键菜单">disableContextmenu</acronym></label><select name="disableContextmenu"><option value="true">禁用</option><option value="false" selected="selected">不禁用 (default)</option></select> <span>禁用编辑区的右键菜单</span></p>
 					<p><label><acronym title="编辑器背景">background</acronym></label><input type="text" class="text" value="" name="background"> <span>设置编辑器背景，格式同CSS同名参数一致。建议直接设置textarea的css背景</span></p>
-					<p><label><acronym title="编辑器JS所在的根路径">editorRoot</acronym></label><input type="text" class="text" value="" name="tools"> <span>编辑器JS文件所在的根路径，用在某些特殊情况下定位编辑器的根路径</span></p>
+					<p><label><acronym title="编辑器JS所在的根路径">editorRoot</acronym></label><input type="text" class="text" value="" name="editorRoot"> <span>编辑器JS文件所在的根路径，用在某些特殊情况下定位编辑器的根路径</span></p>
+					<p><label><acronym title="是否清理粘贴内容">cleanPaste</acronym></label><select name="cleanPaste"><option value="0">不清理</option><option value="1">简单清理Word</option><option value="2" selected="selected">深入清理Word (default)</option><option value="3">强制转文本</option></select> <span>是否清理粘贴HTML代码，清理Word或强制转文本</span></p>
+					<p><label><acronym title="提交按钮的ID">submitID</acronym></label><input type="text" class="text" value="" name="submitID"> <span>非标准submit提交时指定提交按钮的ID值，以触发编辑值同步</span></p>
 				</div>
 			</fieldset>
 			<fieldset>
@@ -105,7 +106,6 @@ body{
 					<p><label><acronym title="本地URL的根路径">urlBase</acronym></label><input type="text" class="text" value="" name="urlBase"> <span>设置本地URL的根路径，用在前后台相对根路径不同的情况</span></p>
 					<p><label><acronym title="本地URL转换方案">urlType</acronym></label><select name="urlType" class="text"><option value="" selected="selected">不处理 (default)</option><option value="abs">abs (转绝对路径)</option><option value="root">root (转根路径)</option><option value="rel">rel (转相对路径)</option></select> <span>本地URL的转换方案选择</span></p>
 					<p><label><acronym title="是否显示块标记">showBlocktag</acronym></label><select name="showBlocktag"><option value="true">显示</option><option value="" selected="selected">不显示 (default)</option></select> <span>是否显示块标记</span></p>
-					<p><label><acronym title="是否深入清理Word代码">wordDeepClean</acronym></label><select name="wordDeepClean"><option value="true" selected="selected">深入清理 (default)</option><option value="false">简单清理</option></select> <span>是否深入清理Word代码</span></p>
 					<p><label><acronym title="加载外部CSS">loadCSS</acronym></label><input type="text" class="text" value="" name="loadCSS"> <span>加载外部CSS文件到iframe编辑区域中</span></p>
 				</div>
 			</fieldset>
